fix(productivity-suite): make todo items deletable on mobile

--- a/productivity-suite/app/fragments/todos/src/App.css
+++ b/productivity-suite/app/fragments/todos/src/App.css
@@ -16,7 +16,7 @@
 .todo-mvc button {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	border: none;
 	background: transparent;
 	font-size: 100%;
 	vertical-align: baseline;
@@ -67,6 +67,7 @@
 	color: inherit;
 	padding: .6rem;
 	border: 1px solid #999;
+	-webkit-appearance: none; /* iPhone fix to make the box-shadow work */
 	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
